--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/hukuk-danismanlik/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Hukuk ve Danışmanlık</title>
+    <link rel="stylesheet" href="/hukuk-danismanlik/src/index.css" />
+<script type="module" src="/hukuk-danismanlik/src/main.tsx"></script>
+
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/hukuk-danismanlik/src/main.tsx"></script>
   </body>
 </html>
