CSS dosyası güncellendi

--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/hukuk-danismanlik/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hukuk ve Danışmanlık</title>
-    <link rel="stylesheet" href="/hukuk-danismanlik/src/index.css" />
-<script type="module" src="/hukuk-danismanlik/src/main.tsx"></script>
-
+    <link rel="stylesheet" href="/hukuk-danismanlik/src/public/css.css" />
   </head>
   <body>
     <div id="root"></div>
