Geçici değişiklikler kaydedildi

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/hukuk-danismanlik/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hukuk ve Danışmanlık</title>
-    <link rel="stylesheet" href="/hukuk-danismanlik/src/public/css.css" />
+    <link rel="stylesheet" href="/hukuk-danismanlik/src/css.css" />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/hukuk-danismanlik/src/main.tsx"></script>
+
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
